Dto added. Input validation added. Issues #4, #5 resolved.
