# src/main/java/org/example/gs/dto/GiftCertificateRequestDto.java
@@ -1,0 +1,24 @@
+package org.example.gs.dto;
+
+import lombok.Data;
+import org.example.gs.model.GiftCertificate;
+
+import java.util.List;
+
+@Data
+public class GiftCertificateRequestDto {
+    private String name;
+    private String description;
+    private Double price;
+    private Integer duration;
+    private List<TagRequestDto> tags;
+
+    public static GiftCertificate fromDtoToEntity(GiftCertificateRequestDto giftCertificateRequestDto) {
+        GiftCertificate giftCertificate = new GiftCertificate();
+        giftCertificate.setName(giftCertificateRequestDto.getName());
+        giftCertificate.setDescription(giftCertificateRequestDto.getDescription());
+        giftCertificate.setPrice(giftCertificateRequestDto.getPrice());
+        giftCertificate.setDuration(giftCertificateRequestDto.getDuration());
+        return giftCertificate;
+    }
+}
