# src/main/java/org/example/gs/dto/TagResponseDto.java
@@ -1,0 +1,20 @@
+package org.example.gs.dto;
+
+import lombok.Data;
+import org.example.gs.model.Tag;
+
+@Data
+public class TagResponseDto {
+    long id;
+    String name;
+
+    public static TagResponseDto fromEntityToDto(Tag tag) {
+        if (tag == null) {
+            return null;
+        }
+        TagResponseDto tagResponseDto = new TagResponseDto();
+        tagResponseDto.setId(tag.getId());
+        tagResponseDto.setName(tag.getName());
+        return tagResponseDto;
+    }
+}
