# src/main/java/org/example/gs/model/GiftCertificate.java
@@ -1,10 +1,12 @@
 package org.example.gs.model;
 
 import lombok.*;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 
 @Data
+@Component
 public class GiftCertificate {
     private long id;
     private String name;
@@ -15,10 +17,14 @@ public class GiftCertificate {
     private String lastUpdateDate;
     private List<Tag> tags;
 
-    public void addTag(long id, String name) {
-        Tag tag = new Tag();
-        tag.setName(name);
-        tag.setId(id);
+    public void addTag(Tag tag) {
         tags.add(tag);
+    }
+
+    public void addTag(long tagId, String tagName) {
+        Tag tag = new Tag();
+        tag.setId(tagId);
+        tag.setName(tagName);
+        addTag(tag);
     }
 }
